# web-scraper

./: README.md  pyproject.toml  scraper.py  test_scraper.py
